configure raate limiter; configure acutator